--- a/index.html
+++ b/index.html
@@ -14,30 +14,50 @@
   <link rel="stylesheet" href="styles/global.css">
   <link rel="stylesheet" href="styles/header.css">
   <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/footer.css">
+  
+
+  
+
   <title>Jean Santos - Desenvolvedor Web</title>
 </head>
 
 <body>
   <header class="header">
     <div class="first-header">
-      <h1 class="title"> Jean.dev</h1>
-      <nav class="menu">
-        <a href="#aboute-me" class='link'>Sobre mim</a>
-        <a href="#aboute-me" class='link'> Projetos</a>
-        <a href="#aboute-me" class='link'>Serviços</a>
-        <a href="#aboute-me" class='link'>Minhas Skills</a>
-      </nav>
-    </div>
+      <nav class="navbar">
+        <h1 class="title">Jean.dev</h1>
+        <ul class="nav-menu">
+            <li class="nav-item">
+                <a href="#about-me" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+                <a href="#projects" class="nav-link">Projects</a>
+            </li>
+            <li class="nav-item">
+                <a href="#services" class="nav-link">Services</a>
+            </li>
+            <li class="nav-item">
+                <a href="#skills" class="nav-link">My Skills</a>
+            </li>
+        </ul>
+        <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+    </nav>
+      </div>
 
     <div class="media-header">
       <div class="apresentation">
         <h2 class="title-2">Olá, eu sou o Jean :)</h2>
         <p class="description">Desenvolvedor Web & Front end</p>
         <div class="sub-menu">
-          <button class="button" onclick="sendCV()">Download CV</button>
+          <button class="button" onclick="location.href='https://linktr.ee/jeanat2';">Linktree</button>
           <!-- Enviar para o linkThree  -->
           <div class="outlined-button">
-            <a href="#">Download CV</a>
+            <a href="https://www.linkedin.com/in/jeandossantosmd/" target=" _blank" rel="noopener">LinkedIn</a>
           </div>
         </div>
 
@@ -47,105 +67,122 @@
   </header>
   <main class="main">
     <article class="about-me">
-      <h1 class="title-main" id="aboute-me">Sobre mim</h1>
-      <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Quibusdam, quae alias! Optio ipsum eaque porro harum, at fugit natus et
-        sunt possimus provident earum, aperiam consectetur, eveniet saepe omnis
-        voluptatem.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sunt autem repellendus aut deleniti dicta neque, maiores excepturi velit fuga harum ipsa doloribus ut nostrum magnam ipsam distinctio, quibusdam obcaecati.
+      <h1 class="title-main" id="about-me">Sobre mim</h1>
+      <p class="description">
+        Me chamo Jean, 27 anos, moro no Vale Real - RS. Amo a minha família, amo musica, amo codar e poder aprender coisas novas neste vasto mundo tech. Toco teclado nas horas vagas. No momento estou empregado por isso ainda não atuo na área, mas para poder conseguir um pouco de experiência estou trabalhando em alguns projetinhos próprio para poder aplicar os conhecimentos adiquiridos e poder contribuir com a comunidade.
       </p>
     </article>
-    <nav class="contact">
-      <figure>
-        <img src="svg/smile.svg" alt="Smile">
+    <nav class="contact" >
+      <figure class="redes-sociais">
+        <div class="circle">
+          <img src="svg/smile.svg" alt="Smile">
+        </div>
         <figcaption class="figCaption">Meu nome</figcaption>
         <label class="small-text">Jean Santos.</label>
       </figure>
-      <figure>
-        <img src="svg/mail.svg" alt="E-mail">
+      <figure class="redes-sociais">
+        <div class="circle">
+          <img src="svg/mail.svg" alt="E-mail">
+        </div>
         <figcaption class="figCaption">E-mail</figcaption>
         <label class="small-text">jeandossanttos1@gmail.com</label>
       </figure>
-      <figure>
-        <img src="svg/instagram.svg" alt="Instagram">
+      <figure class="redes-sociais">
+        <div class="circle">
+          <img src="svg/instagram.svg" alt="Instagram">
+        </div>
         <figcaption class="figCaption">Instagram</figcaption>
         <label class="small-text">@jeanAt2</label>
       </figure>
-      <figure>
-        <img src="svg/phone.svg" alt="Phone">
+      <figure class="redes-sociais">
+        <div class="circle">
+          <img src="svg/phone.svg" alt="Phone">
+        </div>
         <figcaption class="figCaption">Telefone</figcaption>
         <label class="small-text">(51)-997681102</label>
-      </figure>
+      </figure class="redes-sociais">
     </nav>
 
-    <article class="proejcts">
+    <article class="projects" id="projects" >
       <h1 class="title-main">Projetos</h1>
+      <div class="my-projects">
+        <figure class="project">
+          <img src="img/javascript.png" alt="">
+          <figcaption class="figCaption-2">Titulo do Projeto</figcaption>
+          <label class="small-text-2">Tecnologias: HTML, CSS e JS.</label>
+        </figure>
+        <figure class="project">
+          <img src="img/javascript.png" alt="">
+          <figcaption class="figCaption-2">Titulo do Projeto</figcaption>
+          <label class="small-text-2">Tecnologias: HTML, CSS e JS.</label>
+        </figure>
+        <figure class="project">
+          <img src="img/javascript.png" alt="">
+          <figcaption class="figCaption-2">Titulo do Projeto</figcaption>
+          <label class="small-text-2">Tecnologias: HTML, CSS e JS.</label>
+        </figure>
+        <figure class="project">
+          <img src="img/javascript.png" alt="">
+          <figcaption class="figCaption-2">Titulo do Projeto</figcaption>
+          <label class="small-text-2">Tecnologias: HTML, CSS e JS.</label>
+        </figure>
+        <figure class="project">
+          <img src="img/javascript.png" alt="">
+          <figcaption class="figCaption-2">Titulo do Projeto</figcaption>
+          <label class="small-text-2">Tecnologias: HTML, CSS e JS.</label>
+        </figure>
+        <figure class="project">
+          <img src="img/javascript.png" alt="">
 
-      <figure>
-        <img src="" alt="">
-        <figcaption class="figCaption-2">Titulo do Projeto</figcaption>
-        <label class="small-text-2">Tecnologias: HTML, CSS e JS.</label>
-      </figure>
-      <img src="" alt="">
-      <figcaption class="figCaption-2">Titulo do Projeto</figcaption>
-      <label class="small-text-2">Tecnologias: HTML, CSS e JS.</label>
-      </figure>
-      <img src="" alt="">
-      <figcaption class="figCaption-2">Titulo do Projeto</figcaption>
-      <label class="small-text-2">Tecnologias: HTML, CSS e JS.</label>
-      </figure>
-      <img src="" alt="">
-      <figcaption class="figCaption-2">Titulo do Projeto</figcaption>
-      <label class="small-text-2">Tecnologias: HTML, CSS e JS.</label>
-      </figure>
-      <img src="" alt="">
-      <figcaption class="figCaption-2">Titulo do Projeto</figcaption>
-      <label class="small-text-2">Tecnologias: HTML, CSS e JS.</label>
-      </figure>
-      <img src="" alt="">
-      <figcaption class="figCaption-2">Titulo do Projeto</figcaption>
-      <label class="small-text-2">Tecnologias: HTML, CSS e JS.</label>
-      </figure>
+          <figcaption class="figCaption-2">Titulo do Projeto</figcaption>
+          <label class="small-text-2">Tecnologias: HTML, CSS e JS.</label>
+        </figure>
+      </div>
     </article>
-    <article class="services">
+    <article class="services" id="services" >
       <h1 class="title-main">Serviços</h1>
-
-      <div class="card">
-        <img src="svg/code.svg" alt="Code">
-        <p class="card-text">
-          Criação de Sites
-        </p>
-      </div>
-      <div class="card">
-        <img src="svg/smartphone.svg" alt="Code">
-        <p class="card-text">
-          Sites responsivos
-        </p>
+      <div class="my-services">
+        <div class="card">
+          <img src="svg/code.svg" alt="Code">
+          <p class="card-text">
+            Criação de Sites
+          </p>
+        </div>
+        <div class="card">
+          <img src="svg/smartphone.svg" alt="Code">
+          <p class="card-text">
+            Sites responsivos
+          </p>
+        </div>
       </div>
     </article>
 
-    <article class="skills">
+    <article class="skills" id="skills">
       <h1 class="title-main">Minhas skills</h1>
 
-      <div class="card-skills">
-        <img src="svg/icomoon-free_html-five.svg" alt="HTML 5">
+      <div class="list-skills">
+        <div class="card-skills">
+          <img src="svg/icomoon-free_html-five.svg" alt="HTML 5">
+        </div>
+        <div class="card-skills">
+          <img src="svg/fontisto_css3.svg" alt="CSS3">
+        </div>
+        <div class="card-skills">
+          <img src="svg/akar-icons_javascript-fill.svg" alt="JavaScritp">
+        </div>
+        <div class="card-skills">
+          <img src="svg/akar-icons_react-fill.svg" alt="ReactJS">
+        </div>
       </div>
-      <div class="card-skills">
-        <img src="svg/fontisto_css3.svg" alt="CSS3">
-      </div>
-      <div class="card-skills">
-        <img src="svg/akar-icons_javascript-fill.svg" alt="JavaScritp">
-      </div>
-      <div class="card-skills">
-        <img src="svg/akar-icons_react-fill.svg" alt="ReactJS">
-      </div>
+
     </article>
   </main>
 
   <footer class="footer">
     <p>Feito por <label>Jean Carlos</label></p>
+    <p>Design feito por <label>Iuri Silva</label></p>
   </footer>
 
 </body>
-
+<script src="js/index.js"></script>
 </html>
